--- a/TaqueriaHernandez/appsettings.json
+++ b/TaqueriaHernandez/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TaqueriaHernandez-D4566B97-9E7F-4A59-B171-E28C445B0EDA;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-LD4L2VO\\SQLEXPRESS; Initial Catalog=taqueria_hernandez; Integrated Security=True"
+      //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TaqueriaHernandez;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
